--- a/css/sections/popular.css
+++ b/css/sections/popular.css
@@ -200,3 +200,11 @@
     font-size: 24px;
     color: var(--secondary-color);
 }
+
+@media screen and (max-width: 767px) {
+    .popular-foods__filters {
+        justify-content: unset;
+    }
+  }
+  
+
